[package]
name = "coding_pet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = "0.13.*"
bevy-inspector-egui = "0.24.*"
iyes_perf_ui = "0.2.*"
bevy_pancam = "0.11.0"
kd-tree = "0.5.3"
rand = "0.8.5"
typenum = "1.17.0"